2011-11-23 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/agent_conf_gis.php
	godmode/agentes/agent_manager.php: Fixed 'Ignore GIS data' and
	change labels.
	
	Fixes: #3437659

2011-11-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* images/skin/skin_default/include/styles/tip.css
	images/skin/skin_default/include/styles/pandora.css: Removed 
	background image in tip class.

2011-11-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/agentes/module_manager_editor_common.php: Removed entities
	from agent name.
	
	Fixes: #3437885

2011-11-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/servers/manage_recontask.php
	 godmode/servers/manage_recontask_form.php: Fixed bug due to 
	 autorefresh in these views.

2011-11-22 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/alerts/configure_alert_template.php: Fixed template 
	update. Thank you to Manuel Arostegui for the patch!

2011-11-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* operation/snmpconsole/snmp_view.php: Added new free search and
	fix agent and OID combo search.

2011-11-17 Juan Manuel Ramon <juanmanuel.ramon@artica.es>

	* godmode/snmpconsole/snmp_alert.php: Fixed bad time description.

	* godmode/reporting/visual_console_builder.editor.php
	 include/functions_visual_map.php: Now it's possible to link icons 
	 in visual console with a web page through the label. 

	* operation/visual_console/index.php
	 operation/visual_console/render_view.php
	 include/functions_config.php	 
	 operation/menu.php
	 godmode/menu.php
	 godmode/setup/setup.php
	 godmode/setup/setup_visuals.php
	 include/config_process.php: Added two new autorefresh 
	 parameters: one global and the other for visual console.

2011-11-17  Junichi Satoh  <junichi@rworks.jp>

	* include/help/ja/help_network_map_enterprise.php,
	include/help/ja/help_view_services.php: Added missing help files.

2011-11-16 Juan Manuel Ramon <juanmanuel.ramon@artica.es>
